# 3D-Modeler-Vulkan

./: .gitignore  BUILD.bat  CMakeLists.txt  README.md
src/: CMakeLists.txt  compile.bat  main.cpp
src/App/: ModelingApp.cpp  ModelingApp.hpp
src/Core/: FirstApp.cpp  FirstApp.hpp  ModelingApp.cpp  ModelingApp.hpp  VEDevice.hpp  VEModel.cpp  VEPipeline.cpp  VEPipeline.hpp  VESwapChain.cpp  VESwapChain.hpp  VEWindow.cpp  VEWindow.hpp
src/Game/: GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  PointLight.h
src/Renderer/: VEBuffer.cpp  VEBuffer.h  VECamera.cpp  VECamera.h  VEDescriptors.cpp  VEDescriptors.h  VEDevice.cpp  VEDevice.hpp  VEFrameInfo.h  VEModel.cpp  VEModel.hpp  VEPipeline.cpp  VEPipeline.hpp  VERenderer.cpp  VERenderer.h  VESimpleRendererSystem.cpp  VESimpleRendererSystem.h  VESwapChain.cpp  VESwapChain.hpp  VEUtils.h  VEWindow.hpp
src/Renderer/RenderingSystems/: VE2DRendererSystem.cpp  VE2DRendererSystem.h  VEPointLightSystem.cpp  VEPointLightSystem.h  VESimpleRendererSystem.cpp  VESimpleRendererSystem.h  VEVertPointRenderSystem.cpp  VEVertPointRenderSystem.h
src/Shaders/: .placeholder  PointLightVisual.frag  PointLightVisual.vert  Simple2DShader.frag  Simple2DShader.vert  SimpleShader.frag  SimpleShader.frag.spv  SimpleShader.vert  VertPointShader.frag  VertPointShader.vert
