cmake_minimum_required(VERSION 3.10)

set(EXECUTABLE_OUTPUT_DIR "${CMAKE_BINARY_DIR}/bin/Debug")
# Project Name
project(3DModeler)

# Use C++20
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include(FetchContent)

FetchContent_Declare(
  glfw
  GIT_REPOSITORY https://github.com/glfw/glfw.git
  GIT_TAG        3.3.8 # Specify the version you need
)

FetchContent_MakeAvailable(glfw)

# Find the required packages
find_package(Vulkan REQUIRED)

# Include Directories
include_directories(${Vulkan_INCLUDE_DIRS})
include_directories("libs/tiny_obj_loader")

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data/ DESTINATION ${EXECUTABLE_OUTPUT_DIR}/data/)

add_subdirectory(src)

# If using validation layers, copy the required JSON files (optional)
# add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
#    COMMAND ${CMAKE_COMMAND} -E copy_if_different
#        "${CMAKE_SOURCE_DIR}/path_to_json/VK_LAYER_KHRONOS_validation.json"
#        $<TARGET_FILE_DIR:${PROJECT_NAME}>)
